<resources>
    <string name="app_name">Curriculum Vitae 2</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="next">next</string>
    <string name="skills">Skills</string>
    <string name="Skills">SKILLS</string>
    <string name="ios">iOS</string>
    <string name="android">Android</string>
    <string name="flutter">Flutter</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="hobbies">Hobbies</string>
    <string name="music">Music</string>
    <string name="sport">Sport</string>
    <string name="games">Games</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>