<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/border"
            android:orientation="vertical">
            <TextView
                android:id="@+id/Skills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Skills"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/android"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/SeekBarAndr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:max="100"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/ios"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/SeekBarIos"
                    android:layout_width="264dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="5dp"
                    android:max="100"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/flutter"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    />

                <SeekBar
                    android:id="@+id/SeekBarFlutter"
                    android:layout_width="264dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:max="100"
                    android:layout_marginEnd="5dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/Language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/language"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="5dp"

                android:layout_gravity="center">

                <CheckBox
                    android:id="@+id/arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16.5sp"
                    android:layout_marginEnd="16dp"
                    />

                <CheckBox
                    android:id="@+id/french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/french"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16.5sp" />

                <CheckBox
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/english"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16.5sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/Hobbies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hobbies"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_gravity="center">

                <CheckBox
                    android:id="@+id/music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16.5sp"
                    android:layout_marginEnd="16dp"
                    />

                <CheckBox
                    android:id="@+id/sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sport"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16.5sp"
                    />

                <CheckBox
                    android:id="@+id/games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16.5sp"
                    />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_bias="0.154" />
    </LinearLayout>
</ScrollView>